--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = espidf
 
+monitor_speed = 115200
+
 [env:d1_mini]
 platform = custom8266
 board = d1_mini
