Refactoring, removing unneccessary logs and trying to get log colours to work

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,5 @@ board = esp32-s3-devkitc-1
 framework = espidf
 
 monitor_speed = 115200
+monitor_filters = direct, esp32_exception_decoder
 
-[env:d1_mini]
-platform = custom8266
-board = d1_mini
-framework = esp8266-rtos-sdk
